Adjust chart aspect ratio and fix chart alignment

--- a/src/components/Analytics/AnalyticsChart/AnalyticsChart.css
+++ b/src/components/Analytics/AnalyticsChart/AnalyticsChart.css
@@ -3,8 +3,14 @@
 }
 
 .AnalyticsChart {
+  position: relative;
   width: 100%;
   height: 100%;
+}
+
+.AnalyticsChart__container {
+  position: absolute;
+  bottom: -12%;
 }
 
 .AnalyticsChart__chart .recharts-surface {
